--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "qrcode": "^1.5.4",
+    "react-qr-reader": "^3.0.0-beta-1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
