--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zxing/library": "^0.21.3",
+    "ajv": "^8.17.1",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.3",
+    "html5-qrcode": "^2.3.8",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "reactjs-social-login": "^2.6.3",
