--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.1.0",
+    "firebase": "^10.13.2",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -26,6 +27,7 @@
     "path": "^0.12.7",
     "qrcode": "^1.5.4",
     "react-qr-reader": "^3.0.0-beta-1",
+    "twilio": "^5.3.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
