--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,17 +1,20 @@
-
 {
-    "version":2,
+    "version": 2,
     "builds": [
       {
-        "src": "api/**/*.js",
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      }
+      { "src": "/students(.*)", "dest": "/index.js" },
+      { "src": "/food(.*)", "dest": "/index.js" },
+      { "src": "/faculty(.*)", "dest": "/index.js" },
+      { "src": "/auth(.*)", "dest": "/index.js" },
+      { "src": "/admin(.*)", "dest": "/index.js" },
+      { "src": "/api(.*)", "dest": "/index.js" },
+      { "src": "/payments(.*)", "dest": "/index.js" },
+      { "src": "/application(.*)", "dest": "/index.js" }
     ]
   }
   
