--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,7 +14,7 @@
     "html5-qrcode": "^2.3.8",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "reactjs-social-login": "^2.6.3",
+    "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
