--- a/Server/package.json
+++ b/Server/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "path": "^0.12.7",
     "qrcode": "^1.5.4",
     "react-qr-reader": "^3.0.0-beta-1",
